# featureforge-studio

./: .gitignore  LICENSE  README.md  pyproject.toml
featureforge/: .gitignore  MANIFEST.in  __init__.py  app.py  cli.py  pyproject.toml  requirements.txt
featureforge/configs/: __init__.py  default_config.json  transformation_templates.json
featureforge/core/: __init__.py  code_generator.py  column_transformer_builder.py  dataset_manager.py  eda_engine.py  export_engine.py  pipeline_builder.py  profiling_engine.py  transformation_manager.py
featureforge/featureforge_studio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
featureforge/pages/: 1_upload_summary.py  2_eda.py  3_transformations.py  4_exports.py  5_future_modules.py  __init__.py
featureforge/tests/: __init__.py  test_exports.py  test_pipelines.py  test_transformations.py  test_upload.py
featureforge/transformers/: __init__.py  custom_transformers.py  encoding_transformers.py  missing_value_transformers.py  outlier_transformers.py  scaling_transformers.py
featureforge/utils/: __init__.py  frontend.py
featureforge/visualization/: __init__.py
