[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "featureforge-studio"
version = "0.1.0"
description = "Interactive EDA and feature engineering studio for reproducible ML preprocessing workflows"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Aarush" }]
license = "MIT"
keywords = [
    "feature-engineering",
    "eda",
    "streamlit",
    "machine-learning",
    "preprocessing",
    "scikit-learn",
    "data-science",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "streamlit>=1.34",
    "pandas>=2.0",
    "numpy>=1.24",
    "plotly>=5.20",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "ydata-profiling>=4.8",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
featureforge-app = "featureforge.cli:main"

[project.urls]
Homepage = "https://github.com/aarush07/featureforge"
Repository = "https://github.com/aarush07/featureforge"
Issues = "https://github.com/aarush07/featureforge/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["featureforge*"]